--- a/style.css
+++ b/style.css
@@ -11,3 +11,19 @@ Global styles
 body {
   font-family: 'Barlow Condensed', sans-serif;
 }
+
+/* 
+-----------------------------------------------------------------
+HTML elements 
+-----------------------------------------------------------------
+*/
+
+.wrapper {
+  height: 100vh;
+  width: 100vw;
+  background: radial-gradient(
+    134.34% 134.34% at 50% 0%,
+    #1f3757 0%,
+    #131537 100%
+  );
+}
