--- a/style.css
+++ b/style.css
@@ -26,4 +26,49 @@ HTML elements
     #1f3757 0%,
     #131537 100%
   );
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.scoreboard {
+  width: 700px;
+  height: 150px;
+  border-radius: 15px;
+  border: 1px solid white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.title {
+  padding-left: 30px;
+}
+
+.score {
+  width: 150px;
+  height: 115px;
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 10px;
+  margin-right: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.score p {
+  color: blue;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 2.5px;
+  text-transform: uppercase;
+}
+
+.score h1 {
+  color: gray;
+  font-size: 50px;
+  font-family: 'Barlow', sans-serif;
 }
