Add `transition:transform` on hover of `.hands>.hand*3` div

--- a/style.css
+++ b/style.css
@@ -92,3 +92,12 @@ HTML elements
 .hands .scissors {
   margin-left: 20px;
 }
+
+.hands .hand {
+  cursor: pointer;
+  transition: all 0.25s;
+}
+
+.hands .hand:hover {
+  transform: translate3d(0px, -8px, 0px);
+}
